force-app/main/default/objects/agentjd__c/agentjd__c.object-meta.xml
<CustomObject>
    <description>Agentforce Workshopでのエージェント求人票を作る</description>
    <label>エージェント求人票</label>
    <nameField>
        <label>エージェント愛称</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>