force-app/main/default/objects/agentjd__c/fields/agentforcews__c.field-meta.xml
<CustomField>
    <fullName>agentforcews__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>エージェント検討</label>
    <referenceTo>agentforcews__c</referenceTo>
    <relationshipLabel>エージェント求人票</relationshipLabel>
    <relationshipName>agentforcejd</relationshipName>
    <type>Lookup</type>
</CustomField>