force-app/main/default/objects/agentjd__c/fields/data_knowledge__c.field-meta.xml
<CustomField>
    <fullName>data_knowledge__c</fullName>
    <label>データやナレッジ</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>