force-app/main/default/objects/agentjd__c/fields/expected_effect__c.field-meta.xml
<CustomField>
    <fullName>expected_effect__c</fullName>
    <label>想定効果</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>