force-app/main/default/objects/agentjd__c/fields/job_content__c.field-meta.xml
<CustomField>
    <fullName>job_content__c</fullName>
    <label>職務内容</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>