force-app/main/default/objects/agentjd__c/fields/job_scope__c.field-meta.xml
<CustomField>
    <fullName>job_scope__c</fullName>
    <label>業務範囲</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>