force-app/main/default/objects/agentjd__c/fields/preferred_skills__c.field-meta.xml
<CustomField>
    <fullName>preferred_skills__c</fullName>
    <label>歓迎スキル</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>