force-app/main/default/objects/agentjd__c/fields/required_skills__c.field-meta.xml
<CustomField>
    <fullName>required_skills__c</fullName>
    <label>必須スキル</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>