force-app/main/default/objects/agentjd__c/fields/work_time__c.field-meta.xml
<CustomField>
    <fullName>work_time__c</fullName>
    <label>勤務時間</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>